# latebit-engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .todo  CMakeLists.txt  Makefile  README.md  asan.supp  shmuxfile.sh  vcpkg-configuration.json  vcpkg.json
cmake/: Config.cmake  Native.cmake  Package.cmake  Release.cmake  Testing.cmake  Utils.cmake  WebAssembly.cmake
examples/: game.cpp  sprite.txt
include/: Animation.h  AudioManager.h  Box.h  Clock.h  Colors.h  Configuration.h  DisplayManager.h  Event.h  EventCollision.h  EventKeyboard.h  EventMouse.h  EventOut.h  EventStep.h  EventView.h  Font.h  Frame.h  GameManager.h  InputManager.h  LogManager.h  Logger.h  Manager.h  Music.h  Object.h  ObjectList.h  ObjectListIterator.h  ResourceManager.h  SceneGraph.h  Sound.h  Sprite.h  SpriteParser.h  Vector.h  ViewObject.h  WorldManager.h  utils.h
includes/: Animation.h  Box.h  Colors.h  Event.h  EventCollision.h  EventStep.h  Frame.h  (+8 more)
latebit/core/: CMakeLists.txt  GameManager.cpp  GameManager.h  GameManager.test.cpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.test.cpp
latebit/core/audio/: AudioManager.cpp  AudioManager.h  AudioManager.test.cpp  Music.cpp  Music.h  Music.test.cpp  Sound.cpp  Sound.h  Sound.test.cpp
latebit/core/configuration/: Configuration.cpp  Configuration.h  Configuration.test.cpp
latebit/core/events/: Event.cpp  Event.h  Event.test.cpp  EventCollision.cpp  EventCollision.h  EventCollision.test.cpp  EventInput.cpp  EventInput.h  EventInput.test.cpp  EventKeyboard.cpp  EventKeyboard.test.cpp  EventMouse.cpp  EventMouse.h  EventMouse.test.cpp  EventOut.h  EventOut.test.cpp  EventOverlap.h  EventOverlap.test.cpp  EventStep.cpp  EventStep.h  EventStep.test.cpp  EventTarget.cpp  EventTarget.h  EventTarget.test.cpp  EventView.cpp  EventView.h
latebit/core/geometry/: Box.cpp  Box.h  Box.test.cpp  Vector.cpp  Vector.h  Vector.test.cpp
latebit/core/graphics/: Animation.cpp  Animation.h  Animation.test.cpp  Colors.cpp  Colors.h  Colors.test.cpp  DisplayManager.cpp  DisplayManager.h  Font.cpp  Font.h  Font.test.cpp  Frame.cpp  Frame.h  Frame.test.cpp  Keyframe.cpp  Keyframe.h  Keyframe.test.cpp  PNG.cpp  Sprite.cpp  Sprite.h  Sprite.test.cpp  SpriteParser.cpp  SpriteParser.h  SpriteParser.test.cpp
latebit/core/input/: InputManager.cpp  InputManager.h
latebit/core/objects/: Object.cpp  Object.h  Object.test.cpp  ObjectList.cpp  ObjectList.h  ObjectList.test.cpp  ObjectListIterator.test.cpp  ObjectUtils.cpp  ObjectUtils.h  ObjectUtils.test.cpp  SceneGraph.cpp  SceneGraph.h  SceneGraph.test.cpp  WorldManager.cpp  WorldManager.h  WorldManager.test.cpp  utils.cpp  utils.h
latebit/core/utils/: Manager.cpp  Manager.h  Manager.test.cpp  utils.cpp  utils.h  utils.test.cpp
latebit/core/world/: Camera.cpp  Camera.h  Camera.test.cpp  Object.cpp  Object.h  Object.test.cpp  ObjectUtils.cpp  ObjectUtils.h  ObjectUtils.test.cpp  Physics.cpp  Physics.h  Physics.test.cpp  Scene.cpp  Scene.h  Scene.test.cpp  SceneGraph.cpp  SceneGraph.h  SceneGraph.test.cpp  SceneManager.h  View.cpp  View.h  View.test.cpp  WorldManager.cpp  WorldManager.h  WorldManager.test.cpp
latebit/sid/: CMakeLists.txt
latebit/sid/parser/: TuneParser.cpp  TuneParser.h  TuneParser.test.cpp  parser.cpp  parser.h  parser.test.cpp  symbol.cpp  symbol.h  symbol.test.cpp
latebit/sid/synth/: Configuration.cpp  Effect.cpp  Effect.h  Effect.test.cpp  Envelope.cpp  Envelope.h  Note.cpp  Note.h  Note.test.cpp  Oscillator.cpp  Oscillator.h  Oscillator.test.cpp  Sequencer.cpp  Sequencer.h  Sequencer.test.cpp  Tune.cpp  Tune.h  Tune.test.cpp  Wavetable.cpp  Wavetable.h  config.h  configuration.cpp  configuration.h  oscillator.cpp  oscillator.h  oscillator.test.cpp  sequencer.cpp  sequencer.h  sequencer.test.cpp  track.cpp  track.h  track.test.cpp  tune.cpp  tune.h  wavetable.cpp  wavetable.h
latebit/ui/: Button.cpp  Button.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  Control.h  Dialog.cpp  Dialog.h  Icon.h  Menu.cpp  Menu.h  Rectangle.cpp  Rectangle.h  Slider.cpp  Slider.h  Text.cpp  Text.h  ViewObject.cpp  ViewObject.h  utils.cpp  utils.h
latebit/utils/: CMakeLists.txt  Logger.cpp  Logger.h  Math.cpp  Math.h  Parser.cpp  Parser.h
src/utils/: CMakeLists.txt  Logger.cpp  Logger.h  Parser.cpp  Parser.h
test/: Animation_test.cpp  Animation_test.h  Box_test.cpp  Box_test.h  CMakeLists.txt  Colors_test.cpp  Colors_test.h  EventCollision_test.cpp  EventCollision_test.h  EventKeyboard_test.cpp  EventKeyboard_test.h  EventMouse_test.cpp  EventMouse_test.h  EventOut_test.cpp  EventOut_test.h  EventStep_test.cpp  EventStep_test.h  Event_test.cpp  Event_test.h  Frame_test.cpp  Frame_test.h  GameManager_test.cpp  GameManager_test.h  Manager_test.cpp  Manager_test.h  Music_test.cpp  Music_test.h  ObjectListIterator_test.cpp  ObjectListIterator_test.h  ObjectList_test.cpp  ObjectList_test.h  Object_test.cpp  Object_test.h  ResourceManager_test.cpp  ResourceManager_test.h  Sound_test.cpp  Sound_test.h  SpriteParser_test.cpp  SpriteParser_test.h  Sprite_test.cpp  (+13 more)
test/fixtures/: broken.cfg  correct.lbspr  correct.txt  latebit.cfg  missing-frame.lbspr  missing-frame.txt  sfx.lbsfx  sfx.lbtune  sfx2.lbsfx  song.lbtune  sound  wrong-height.lbspr  wrong-height.txt  wrong-width.lbspr  wrong-width.txt
test/integration/AudioManager/: clipping.cpp  sfx.cpp
test/integration/InputManager/: mapping.cpp
test/integration/WorldManager/: dynamics.cpp  platforming.cpp  scene.cpp
test/integration/ui/: dialog.cpp  start.cpp
test/lib/: colors.cpp  colors.h  run.cpp  run.h  test.cpp  test.h
test/suites/: Animation_test.cpp  Box_test.cpp  Colors_test.cpp  Configuration_test.cpp  EventCollision_test.cpp  EventKeyboard_test.cpp  EventMouse_test.cpp  EventOut_test.cpp  EventStep_test.cpp  Event_test.cpp  Font_test.cpp  Frame_test.cpp  GameManager_test.cpp  Manager_test.cpp  Music_test.cpp  ObjectListIterator_test.cpp  ObjectList_test.cpp  Object_test.cpp  ResourceManager_test.cpp  SceneGraph_test.cpp  Sound_test.cpp  SpriteParser_test.cpp  Sprite_test.cpp  Vector_test.cpp  WorldManager_test.cpp  utils_test.cpp
(+157 files in other folders)
